<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.android.musicstructure.MusicLibraryActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/music_library_text_view" />

    <TextView
        android:id="@+id/playlist_text_view"
        style="@style/MusicLibraryMenu"
        android:text="@string/playlists" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/black" />

    <TextView
        android:id="@+id/albums_text_view"
        style="@style/MusicLibraryMenu"
        android:text="@string/albums" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/black" />

    <TextView
        android:id="@+id/artists_text_view"
        style="@style/MusicLibraryMenu"
        android:text="@string/artists" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/black" />

    <TextView
        android:id="@+id/songs_text_view"
        style="@style/MusicLibraryMenu"
        android:text="@string/songs" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/black" />


</LinearLayout>
